Updated Xorcery Examples with latest Xorcery JPMS changes